--- a/SmartTravelPlanner/SmartTravelPlanner.csproj
+++ b/SmartTravelPlanner/SmartTravelPlanner.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D7DF8069-396B-4FFD-865E-8B10E343EC90}</ProjectGuid>
+    <ProjectGuid>{6E4AEFA3-0264-4F8E-831A-6E58EAC5F019}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>SmartTravelPlanner1</RootNamespace>
-    <AssemblyName>SmartTravelPlanner1</AssemblyName>
+    <RootNamespace>SmartTravelPlanner</RootNamespace>
+    <AssemblyName>SmartTravelPlanner</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
