Add specific styles to buttons

--- a/SmartTravelPlanner/SmartTravelPlanner.csproj
+++ b/SmartTravelPlanner/SmartTravelPlanner.csproj
@@ -65,6 +65,10 @@
     <Compile Include="TextBox.xaml.cs">
       <DependentUpon>TextBox.xaml</DependentUpon>
     </Compile>
+    <Page Include="Styles.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
